third_party/rust/paste/tests/ui/no-ident-after-colon.stderr
error: expected identifier after `:`
 --> $DIR/no-ident-after-colon.rs:2:15
  |
2 |     fn [<name:0>]() {}
  |               ^
