third_party/rust/paste/tests/ui/no-ident-after-colon.rs
paste::item! {
    fn [<name:0>]() {}
}

fn main() {}
